# Evolutionary_Computing

./: Mountaincar_neural_network_example.ipynb  pyproject.toml
Notebook_assignment_individual/: TSP_STUDENT.ipynb  one_max_problem_SOLUTION-2.ipynb  one_max_problem_STUDENT-1.ipynb
