[tool.poetry]
name = "evolutionary-computing"
version = "0.1.0"
description = ""
authors = ["GenhaoLi <ligenhao20010916@gmail.com>"]
readme = "README.md"
packages = [{include = "evolutionary_computing"}]

[tool.poetry.dependencies]
python = "^3.10.14"
numpy = "^2.1.1"
matplotlib = "^3.9.2"
networkx = "^3.3"
gymnasium = "^0.29.1"
pygame = "^2.6.0"
plotly = "^5.24.1"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
